[package]
name = "strawberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plex = "0.2.5"
lalrpop-util = "0.17.2"
regex = "1.7.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }

[build-dependencies]
lalrpop = "0.17.2"